# Tittu_Agent

./: .gitignore  BrainAgent_OS_Technical_Documentation.md  Feature_Improvement_Plan.md  Final_Locked_Plan.md  Improvement_progress.md  PROGRESS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  main.yml
Skills/: Skill_1_AA.md  Skill_3_VA.md
Skills/antigravity-awesome-skills-main/: CATALOG.md  CHANGELOG.md  skills_index.json
Skills/awesome-claude-skills-main/: .gitignore
Skills/graphify-3/: CHANGELOG.md  README.md  pyproject.toml
scripts/: extract-skills.ts  llm-call.sh
src/: App.tsx  index.css  main.tsx  placeholder.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib_tests.rs
src-tauri/src/commands/: evolution.rs  float.rs  generate.rs  gguf.rs  ide.rs  knowledge.rs  mobile.rs  mod.rs  models.rs  office.rs  research.rs  run_llama.rs  settings.rs  skills.rs  sync.rs  tests.rs  tools.rs
src-tauri/src/providers/: gguf.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  registry.rs  system.rs  traits.rs
src/components/: AgentSelector.tsx  ChatInput.tsx  ChatMessage.tsx  FloatingAgent.tsx  GgufModels.tsx  GraphView.tsx  IDELayout.tsx  KnowledgeBase.tsx  MCPEngine.tsx  MobileSDK.tsx  ModelSelector.tsx  OfficeAutomation.tsx  Performance.tsx  ResearchAgents.tsx  SelfEvolution.tsx  SettingsModal.tsx  SkillsManager.tsx  TabLayout.tsx  ToolResult.tsx
src/lib/: api.ts  (+10 more)
tests/: app.spec.ts
(+43 files in other folders)
