[package]
name = "app"
version = "0.1.0"
description = "Tittu Agent — Cross-Platform AI Desktop App"
authors = ["Vivek Venu"]
license = "MIT"
repository = "https://github.com/vivekvenu4511-lgtm/Tittu_Agent"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
num_cpus = "1.16"
futures = "0.3"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
gguf = ["dep:llama_cpp"]
office = ["dep:calamine"]
knowledge = ["dep:rusqlite"]

[dependencies.llama_cpp]
version = "0.3"
optional = true
features = ["native"]

[dependencies.calamine]
version = "0.24"
optional = true

[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]

